jwksproxy/deployment-k8s-noa-re.yaml
# Source: k8s.noa.re
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-noa-re
  labels:
    app: k8s-noa-re
  namespace: jwksproxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-noa-re
  template:
    metadata:
      labels:
        app: k8s-noa-re
      annotations:
        checksum/config: 81afc1a044cef5e56c76e3edc21d61c0b64b1dc543a690549fc51abb95007391
    spec:
      containers:
      - name: k8s-noa-re
        image: repo.noa.re/jwksproxy:0.1.0-b89ffeed
        volumeMounts:
        - name: k8s-noa-re-config
          mountPath: /config
      volumes:
      - name: k8s-noa-re-config
        configMap:
          name: k8s-noa-re-config
