jwksproxy/httproute-k8s-noa-re.yaml
# Source: k8s.noa.re
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: k8s-noa-re
  namespace: jwksproxy
spec:
  parentRefs:
  - name: k8s-noa-re
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - k8s.noa.re
  rules:
  - backendRefs:
    - name: k8s-noa-re
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
